# PlagueInc

./: PlagueInc.cabal  README.md  open.sh  stack.yaml
app/: Main.hs
src/: Lib.hs  State.hs
src/Program/: Render.hs  Start.hs  State.hs  Update.hs
src/Result/: Render.hs  Update.hs
src/Settings/: Render.hs  State.hs  Update.hs
src/SettingsScreen/: Render.hs  State.hs  Update.hs
src/Simulation/: Render.hs  State.hs  Update.hs
